Add new functions for Constant classes

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -42,5 +42,6 @@ library
     LLVM.FFI.ArrayRef
     LLVM.FFI.DebugLoc
     LLVM.FFI.Use
+    LLVM.FFI.APFloat
   other-modules:
     LLVM.FFI.Interface
