Add pass handling functions & classes

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -47,6 +47,7 @@ library
     LLVM.FFI.PassManager
     LLVM.FFI.Pass
     LLVM.FFI.PassManagerBuilder
+    LLVM.FFI.PassInfo
     LLVM.Target.Alpha
     LLVM.Target.ARM
     LLVM.Target.Blackfin
