Add support for alias analysis

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -66,5 +66,6 @@ library
     LLVM.Target.XCore
     LLVM.FFI.Transforms.Scalar
     LLVM.FFI.OStream
+    LLVM.FFI.AliasAnalysis
   other-modules:
     LLVM.FFI.Interface
