Add IPO transformation passes

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -65,6 +65,7 @@ library
     LLVM.Target.X86
     LLVM.Target.XCore
     LLVM.FFI.Transforms.Scalar
+    LLVM.FFI.Transforms.IPO
     LLVM.FFI.OStream
     LLVM.FFI.AliasAnalysis
   other-modules:
