Add support for Twine class

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -68,5 +68,6 @@ library
     LLVM.FFI.Transforms.IPO
     LLVM.FFI.OStream
     LLVM.FFI.AliasAnalysis
+    LLVM.FFI.Twine
   other-modules:
     LLVM.FFI.Interface
