--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -69,6 +69,7 @@ library
     LLVM.FFI.OStream
     LLVM.FFI.AliasAnalysis
     LLVM.FFI.Twine
+    LLVM.FFI.Loop
     LLVM.FFI.CPP
   other-modules:
     LLVM.FFI.Interface
