Add support for GenericValue

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -73,5 +73,6 @@ library
     LLVM.FFI.CPP
     LLVM.FFI.Pass.Haskell
     LLVM.FFI.SmallVector
+    LLVM.FFI.GenericValue
   other-modules:
     LLVM.FFI.Interface
