More functions for ExecutionEngine

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -75,5 +75,6 @@ library
     LLVM.FFI.SmallVector
     LLVM.FFI.GenericValue
     LLVM.FFI.ExecutionEngine
+    LLVM.FFI.MachineCodeInfo
   other-modules:
     LLVM.FFI.Interface
