Add support for Target class

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -77,5 +77,6 @@ library
     LLVM.FFI.ExecutionEngine
     LLVM.FFI.MachineCodeInfo
     LLVM.FFI.EngineBuilder
+    LLVM.FFI.Target
   other-modules:
     LLVM.FFI.Interface
