Add a helper module which exports all LLVM modules

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -23,6 +23,7 @@ library
     FlexibleInstances
     TypeFamilies
   exposed-modules:
+    LLVM.FFI
     LLVM.FFI.StringRef
     LLVM.FFI.ErrorCode
     LLVM.FFI.OOP
