Create Typeable instances for all generated datatypes

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -22,6 +22,7 @@ library
     MultiParamTypeClasses
     FlexibleInstances
     TypeFamilies
+    DeriveDataTypeable
   exposed-modules:
     LLVM.FFI
     LLVM.FFI.StringRef
