Also install cpphs for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - LLVM_VERSION=3.1
 install:
   - sudo apt-get install llvm-${LLVM_VERSION}-dev
-  - cabal install haskell-src filepath
+  - cabal install haskell-src filepath cpphs
   - cabal install --only-dependencies
 script:
   - runghc Setup.hs configure --user --with-llvm-config=llvm-config-${LLVM_VERSION} && runghc Setup.hs build
