--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ install:
   - cabal install haskell-src filepath cpphs
   - cabal install --only-dependencies
 script:
-  - runghc Setup.hs configure --user --with-llvm-config=llvm-config-${LLVM_VERSION} && runghc Setup.hs build
+  - ghc --make Setup.hs -o ./setup
+  - ./setup configure --user --with-llvm-config=llvm-config-${LLVM_VERSION}
+  - ./setup Setup.hs build
