Fix build command for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
 script:
   - ghc --make Setup.hs -o ./setup
   - ./setup configure --user --with-llvm-config=llvm-config-${LLVM_VERSION}
-  - ./setup Setup.hs build
+  - ./setup build
