--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - LLVM_VERSION=3.1
   - LLVM_VERSION=3.4
 install:
-  - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main' >> /etc/apt/sources.list"
+  - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.4 main' >> /etc/apt/sources.list"
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update
   - sudo apt-get install llvm-${LLVM_VERSION}-dev
