--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
   - LLVM_VERSION=2.9
   - LLVM_VERSION=3.0
   - LLVM_VERSION=3.1
+  - LLVM_VERSION=3.2
+  - LLVM_VERSION=3.3
   - LLVM_VERSION=3.4
 install:
   - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.4 main' >> /etc/apt/sources.list"
