Add support for LLVM::Linker module

--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -83,6 +83,7 @@ library
     LLVM.FFI.EngineBuilder
     LLVM.FFI.Target
     LLVM.FFI.TargetMachine
+    LLVM.FFI.Linker
     LLVM.FFI.CPP.String
   other-modules:
     LLVM.FFI.Interface
