Fix test suite for LLVM<3.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,6 @@ install:
   - cabal install --only-dependencies
 script:
   - ghc --make Setup.hs -o ./setup
-  - ./setup configure --user --with-llvm-config=llvm-config-${LLVM_VERSION}
+  - ./setup configure --user --enable-tests --with-llvm-config=llvm-config-${LLVM_VERSION}
   - ./setup build
-  - ./setup install
-  - cd test
-  - ghc --make Main.hs -o tests
-  - ./tests
+  - ./setup test
