--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -1,7 +1,7 @@
 name:           bindings-llvm
 version:        0.1
 author:         Henning Günther
-cabal-version:  >= 1.2
+cabal-version:  >= 1.8
 build-type:     Custom
 
 library
@@ -76,3 +76,10 @@ library
     LLVM.FFI.Attributes
   other-modules:
     LLVM.FFI.Interface
+
+test-suite test-llvm
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: test
+  build-depends: base,bindings-llvm
+  ghc-options: -cpp -pgmPcpphs -optP--cpp
