--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -52,6 +52,7 @@ library
     LLVM.FFI.PassManagerBuilder
     LLVM.FFI.PassInfo
     LLVM.FFI.SetVector
+    LLVM.FFI.Transforms.Analysis
     LLVM.FFI.Transforms.Scalar
     LLVM.FFI.Transforms.IPO
     LLVM.FFI.Transforms.Misc
