--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - LLVM_VERSION=3.2
   - LLVM_VERSION=3.3
   - LLVM_VERSION=3.4
-  - LLVM_VERSION=3.5
+#  - LLVM_VERSION=3.5
 install:
   - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.4 main' >> /etc/apt/sources.list"
   - sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main' >> /etc/apt/sources.list"
