--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: haskell
 ghc:
-  - 7.4
+  - 7.6
 env:
   - LLVM_VERSION=2.8
   - LLVM_VERSION=2.9
@@ -16,8 +16,8 @@ install:
   - wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   - sudo apt-get update
   - sudo apt-get install llvm-${LLVM_VERSION}-dev
-#  - cabal install haskell-src filepath cpphs
-  - sudo apt-get install libghc-haskell-src-dev libghc-system-filepath-dev cpphs libghc-tagged-dev
+  - cabal install haskell-src filepath cpphs
+#  - sudo apt-get install libghc-haskell-src-dev libghc-system-filepath-dev cpphs libghc-tagged-dev
   - cabal install --only-dependencies
 script:
   - ghc --make Setup.hs -o ./setup
