--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ install:
 script:
   - ghc --make Setup.hs -o ./setup
   - ./setup configure --user --enable-tests --verbose=3 --with-llvm-config=llvm-config-${LLVM_VERSION}
-  - ./setup build
+  - ./setup build --verbose=3
   - ./setup test
 cache:
   directories:
