--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,8 @@ matrix:
           sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise']
           packages: ['g++-4.9','libedit-dev','llvm-3.8-dev']
 install:
+  - cabal install cabal-install
+  - cabal --version
   - llvm-config-${LLVM_VERSION} --version
   - cabal install cpphs
   - cabal install --only-dependencies
