--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ install:
   - cabal install --only-dependencies
 script:
   - ghc --make Setup.hs -o ./setup
-  - ./setup configure --user --enable-tests --verbose=2 --with-llvm-config=llvm-config-${LLVM_VERSION} --ghc-options=${COMPILER_OPTS}
+  - ./setup configure --user --enable-tests --verbose=2 --with-llvm-config=llvm-config-${LLVM_VERSION} --ghc-options="${COMPILER_OPTS}"
   - ./setup build --verbose=2
   - ./setup test
 #cache:
