--- a/.travis.yml
+++ b/.travis.yml
@@ -12,31 +12,26 @@ matrix:
       addons:
         apt:
           packages: ['llvm-2.9-dev']
-    - env: LLVM_VERSION=3.0 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
+    - env: LLVM_VERSION=3.0
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9','llvm-3.0-dev']
-    - env: LLVM_VERSION=3.1 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
+          packages: ['llvm-3.0-dev']
+    - env: LLVM_VERSION=3.1
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9','llvm-3.1-dev']
-    - env: LLVM_VERSION=3.2 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
+          packages: ['llvm-3.1-dev']
+    - env: LLVM_VERSION=3.2
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9','llvm-3.2-dev']
-    - env: LLVM_VERSION=3.3 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
+          packages: ['llvm-3.2-dev']
+    - env: LLVM_VERSION=3.3
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9','llvm-3.3-dev']
-    - env: LLVM_VERSION=3.4 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
+          packages: ['llvm-3.3-dev']
+    - env: LLVM_VERSION=3.4
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9','llvm-3.4-dev']
+          packages: ['llvm-3.4-dev']
     - env: LLVM_VERSION=3.5 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
