--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -1,8 +1,11 @@
 name:           bindings-llvm
 version:        0.1
 author:         Henning Günther
-cabal-version:  >= 1.8
+cabal-version:  >= 1.24
 build-type:     Custom
+
+custom-setup
+  setup-depends: base,Cabal,filepath,directory,time,process
 
 library
   build-tools:    cpphs,llvm-config
@@ -16,7 +19,7 @@ library
     wrapper/extra.cpp
     wrapper/HaskellPass.cpp
   ghc-options: -cpp -pgmPcpphs -optP--cpp
-  extensions:
+  default-extensions:
     ForeignFunctionInterface
     CApiFFI
     MultiParamTypeClasses
@@ -24,6 +27,7 @@ library
     TypeFamilies
     DeriveDataTypeable
     DoAndIfThenElse
+  default-language: Haskell2010
   exposed-modules:
     LLVM.FFI
     LLVM.FFI.StringRef
