--- a/.travis.yml
+++ b/.travis.yml
@@ -7,51 +7,58 @@ matrix:
     - env: LLVM_VERSION=2.8
       addons:
         apt:
-          packages: ['llvm-2.8-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-2.8-dev','cabal-install-1.24']
     - env: LLVM_VERSION=2.9
       addons:
         apt:
-          packages: ['llvm-2.9-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-2.9-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.0
       addons:
         apt:
-          packages: ['llvm-3.0-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-3.0-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.1
       addons:
         apt:
-          packages: ['llvm-3.1-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-3.1-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.2
       addons:
         apt:
-          packages: ['llvm-3.2-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-3.2-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.3
       addons:
         apt:
-          packages: ['llvm-3.3-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-3.3-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.4
       addons:
         apt:
-          packages: ['llvm-3.4-dev']
+	  sources: ['hvr-ghc']
+          packages: ['llvm-3.4-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.5 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5']
-          packages: ['g++-4.9','libedit-dev','llvm-3.5-dev']
+          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5','hvr-ghc']
+          packages: ['g++-4.9','libedit-dev','llvm-3.5-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.6 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.6']
-          packages: ['g++-4.9','libedit-dev','llvm-3.6-dev']
+          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.6','hvr-ghc']
+          packages: ['g++-4.9','libedit-dev','llvm-3.6-dev','cabal-install-1.24']
     - env: LLVM_VERSION=3.7 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.7']
-          packages: ['g++-4.9','libedit-dev','llvm-3.7-dev']
+          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.7','hvr-ghc']
+          packages: ['g++-4.9','libedit-dev','llvm-3.7-dev','cabal-install-1.24']
     # - env: LLVM_VERSION=3.8 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
     #   addons:
     #     apt:
-    #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise']
-    #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev']
+    #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise','hvr-ghc']
+    #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev','cabal-install-1.24']
 install:
   #- cabal install cabal-install
   #- cabal --version
