--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,8 @@ matrix:
     #     apt:
     #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise','hvr-ghc']
     #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev','cabal-install-1.24']
+before_install:
+  export PATH=/opt/cabal/1.24/bin:$PATH
 install:
   #- cabal install cabal-install
   #- cabal --version
