--- a/.travis.yml
+++ b/.travis.yml
@@ -7,70 +7,64 @@ matrix:
     - env: LLVM_VERSION=2.8
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-2.8-dev','cabal-install-1.24']
+          packages: ['llvm-2.8-dev']
     - env: LLVM_VERSION=2.9
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-2.9-dev','cabal-install-1.24']
+          packages: ['llvm-2.9-dev']
     - env: LLVM_VERSION=3.0
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-3.0-dev','cabal-install-1.24']
+          packages: ['llvm-3.0-dev']
     - env: LLVM_VERSION=3.1
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-3.1-dev','cabal-install-1.24']
+          packages: ['llvm-3.1-dev']
     - env: LLVM_VERSION=3.2
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-3.2-dev','cabal-install-1.24']
+          packages: ['llvm-3.2-dev']
     - env: LLVM_VERSION=3.3
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-3.3-dev','cabal-install-1.24']
+          packages: ['llvm-3.3-dev']
     - env: LLVM_VERSION=3.4
       addons:
         apt:
-          sources: ['hvr-ghc']
-          packages: ['llvm-3.4-dev','cabal-install-1.24']
+          packages: ['llvm-3.4-dev']
     - env: LLVM_VERSION=3.5 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5','hvr-ghc']
-          packages: ['g++-4.9','libedit-dev','llvm-3.5-dev','cabal-install-1.24']
+          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5']
+          packages: ['g++-4.9','libedit-dev','llvm-3.5-dev']
     - env: LLVM_VERSION=3.6 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.6','hvr-ghc']
-          packages: ['g++-4.9','libedit-dev','llvm-3.6-dev','cabal-install-1.24']
+          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.6']
+          packages: ['g++-4.9','libedit-dev','llvm-3.6-dev']
     - env: LLVM_VERSION=3.7 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.7','hvr-ghc']
-          packages: ['g++-4.9','libedit-dev','llvm-3.7-dev','cabal-install-1.24']
+          sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise-3.7']
+          packages: ['g++-4.9','libedit-dev','llvm-3.7-dev']
     # - env: LLVM_VERSION=3.8 COMPILER_OPTS="-pgmc g++-4.9 -optc=-std=gnu++11"
     #   addons:
     #     apt:
-    #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise','hvr-ghc']
-    #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev','cabal-install-1.24']
+    #       sources: ['ubuntu-toolchain-r-test','llvm-toolchain-precise']
+    #       packages: ['g++-4.9','libedit-dev','llvm-3.8-dev']
 before_install:
-  export PATH=/opt/cabal/1.24/bin:$PATH
+  export PATH=$HOME/.cabal/bin:$PATH
 install:
-  #- cabal install cabal-install
-  #- cabal --version
+  - cabal install cabal-install
+  - cabal --version
   - llvm-config-${LLVM_VERSION} --version
   - cabal install cpphs
   - cabal install --only-dependencies
 script:
-  - cabal configure --user --enable-tests --verbose=2 --with-llvm-config=llvm-config-${LLVM_VERSION} --ghc-options="${COMPILER_OPTS}"
-  - cabal build --verbose=2
-  - cabal test
+  - ghc --make Setup.hs -o setup
+  - ./setup configure --user --enable-tests --verbose=2 --with-llvm-config=llvm-config-${LLVM_VERSION} --ghc-options="${COMPILER_OPTS}"
+  - ./setup build --verbose=2
+  - ./setup test
 #cache:
 #  directories:
 #    - $HOME/.cabal
