--- a/bindings-llvm.cabal
+++ b/bindings-llvm.cabal
@@ -31,6 +31,7 @@ library
     TypeFamilies
     DeriveDataTypeable
     DoAndIfThenElse
+    ViewPatterns
   default-language: Haskell2010
   exposed-modules:
     LLVM.FFI
